# dimjc

./: CMakeLists.txt  Ldimjc.i  README.md  SConstruct
cmake/: DIMJCConfig.cmake.in  DIMJCConfig.h.cmake.in  DIMJCConfigVersion.cmake.in  FindDIM.cmake  FindJSONCPP.cmake
etc/: dimjcd  dimjcdqmd  host_conf.json
include/: DimDQMJobInterface.h  DimJobControl.h  DimJobInterface.h  fileTailer.hh
src/: DimDQMJobControl.cc  DimDQMJobInterface.cc  DimJobControl.cc  DimJobInterface.cc  djc.cxx  fileTailer.cc  fileTailer.cxx
